matrix/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse
  name: synapse-service
spec:
  ports:
  - name: http
    port: 8008
    protocol: TCP
    targetPort: 8008
  selector:
    app: synapse
  type: LoadBalancer
  loadBalancerIP: "192.168.0.100"
  externalTrafficPolicy: Cluster
